--- a/ios/TrolleyDelivery/Info.plist
+++ b/ios/TrolleyDelivery/Info.plist
@@ -65,6 +65,8 @@
 		<string>gibson-bold.ttf</string>
 		<string>Gibson-Regular.ttf</string>
 		<string>Helvetica-Neue.otf</string>
+		<string>Gibson-SemiBold.otf</string>
+		<string>HelveticaNeue-Regular.ttf</string>
 		<string>HelveticaNeue.ttf</string>
 	</array>
 </dict>
