--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/datetimepicker": "^7.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "i18n-js": "^4.2.3",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-localize": "^3.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.1.0",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0"
