--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-localize": "^3.0.0",
+    "react-native-maps": "^1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
