--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "i18n-js": "^4.2.3",
+    "lottie-react-native": "^5.1.6",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
