--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "i18n-js": "^4.2.3",
     "lottie-react-native": "^5.1.6",
     "moment": "^2.29.4",
@@ -31,8 +33,11 @@
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-simple-toast": "^2.0.0",
     "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "^13.9.0"
+    "react-native-svg": "^13.9.0",
+    "react-redux": "^8.0.7",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
