--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-localize": "^3.0.0",
     "react-native-maps": "^1.7.1",
     "react-native-modal": "^13.0.1",
+    "react-native-otp-inputs": "^7.4.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.3",
